fixed some stuff for linter

--- a/client/controlpanel/groupSettings.html
+++ b/client/controlpanel/groupSettings.html
@@ -16,7 +16,12 @@
     <nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button class="navbar-toggle collapsed" data-target="#TheNavBar" data-toggle="collapse" type="button"><span class="icon-bar">&nbsp;</span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href="dashboard.html">PlantPi</a>
+                <button class="navbar-toggle collapsed" data-target="#TheNavBar" data-toggle="collapse" type="button">
+                    <span class="icon-bar">&#8203;</span>
+                    <span class="icon-bar">&#8203;</span>
+                    <span class="icon-bar">&#8203;</span>
+                </button>
+                <a class="navbar-brand" href="dashboard.html">PlantPi</a>
             </div><!--Allow for better compatability when resizing-->
             <div class="collapse navbar-collapse" id="TheNavBar">
                 <ul class="nav navbar-nav navbar-right">
@@ -41,10 +46,8 @@
     <br>
     <br>
     <div class="container">
-        <h1><span class="glyphicon glyphicon-cog">&nbsp;</span>Group Settings for <strong id=renderGroupName></strong></h1>
-        <div id="dynamicGroupName" style="display:inline">
-            <h1></h1>
-        </div>
+        <h1><span class="glyphicon glyphicon-cog">&nbsp;</span>Group Settings for <strong id=renderGroupName>&#8203;</strong></h1>
+
 
         <div class="container">
             <br />
@@ -73,16 +76,16 @@
                             <ul class="list-group" id="rmPlantsGroups">
                                 <li class="list-group-item" data-target="#group1" data-toggle="collapse">Group 1 <span class="caret">&nbsp;</span>
                                     <div class="collapse" id="group1">
-                                        <ul class="list-group" id="group1">
-                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 1</li>
-                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 2</li>
-                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 3</li>
+                                        <ul class="list-group">
+                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 1</li>
+                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 2</li>
+                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 3</li>
                                         </ul>
                                     </div>
                                 </li>
                                 <li class="list-group-item" data-target="#group2" data-toggle="collapse">Group 2 <span class="caret">&#8203;</span>
                                     <div class="collapse" id="group2">
-                                        <ul class="list-group" id="group2">
+                                        <ul class="list-group">
                                             <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 12</li>
                                             <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 34</li>
                                             <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 45</li>
