final[???] fixes for linter

--- a/client/controlpanel/groupSettings.html
+++ b/client/controlpanel/groupSettings.html
@@ -94,10 +94,10 @@
                                     </div>
                                 </li>
                                 <li style="list-style: none; display: inline">
-                                    <div>
+                                    <ul style="padding: 0">
                                         <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 8</li>
                                         <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 9</li>
-                                    </div>
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
             </div><br>
-            <div class="container">
+            <div>
                 <div class="subsection">
                     <p>Remove Group</p>
                 </div>
