--- a/client/controlpanel/index.html
+++ b/client/controlpanel/index.html
@@ -14,6 +14,7 @@
 			x.style.display = 'none';
 		} else {
 			x.style.display = 'block';
+            y.style.display = 'none';
 		}
 	};
 	function showSignup() {
@@ -23,19 +24,20 @@
 			x.style.display = 'none';
 		} else {
 			x.style.display = 'block';
+            y.style.display = 'none';
 		}
 	};
 </script>
 </head>
 <body class="backgroundImg">
 	<div class="gradienttop"></div>
-	
-	
+
+
 	<div class="topright">
 		<div class="userButtons"><a onclick="showSignup()">Signup</a></div>
 		<div class="userButtons"><a onclick="showLogin()">Login</a></div>
 	</div>
-	
+
 	<div class="center box">
 		<h1>PlantPi</h1>
 		<div class=fake-hr1></div>
@@ -44,7 +46,7 @@
 	</div>
 	<div id="hidden-login">
 		<h2 style="margin:0 0 10px 0; text-align:center;">Login</h2>
-	   
+
 		<div class = "login-container">
 		  <form action="/login" method="post">
 			<div>
@@ -55,14 +57,14 @@
 			  <label for="password">Password:</label>
 			  <input name="password" type="password" placeholder="password" />
 			</div>
-			
+
 			<div style="text-align:center;"><input type="submit" value=Login /></div>
 		  </form>
 		</div>
 	</div>
 	<div id="hidden-signup">
 		<h2 style="margin:0 0 10px 0; text-align:center;">Signup</h2>
-	   
+
 		<div class = "signup-container">
 		  <form action="/create-account" method="post">
 			<div>
@@ -77,7 +79,11 @@
 			  <label for="password2">Password:</label>
 			  <input name="password2" type="password" placeholder="password" />
 			</div>
-			
+            <div>
+			  <label for="email">Email Address:</label>
+			  <input name="email" type="text" placeholder="joe@email.com" />
+			</div>
+
 			<div style="text-align:center;"><input type="submit" value=Login /></div>
 		  </form>
 		  <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="true" data-auto-logout-link="false"></div>
