done with email i hope

--- a/client/controlpanel/index.html
+++ b/client/controlpanel/index.html
@@ -79,6 +79,10 @@
               <label for="password2">Password:</label>
               <input name="password2" type="password" placeholder="password" />
             </div>
+            <div>
+              <label for="email">Email Address:</label>
+              <input name="email" type="text" placeholder="joe123@email.com" />
+            </div>
 
             <div style="text-align:center;"><input type="submit" value=Login /></div>
           </form>
