--- a/client/controlpanel/allplants.html
+++ b/client/controlpanel/allplants.html
@@ -78,9 +78,9 @@ xhr.send();
             <div class="pageList">
                 <div class="plantRender">
                     <ul class="plantList" id="expandedPlantContainer">
-                        <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName" href="#" style="font-size: 18px;">Venus Flytrap</a></li>
-                        <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName" href="#" style="font-size: 18px;">Venus Flytrap</a></li>
-                        <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName" href="#" style="font-size: 18px;">Venus Flytrap</a></li>
+                        <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName1" href="#" style="font-size: 18px;">Venus Flytrap</a></li>
+                        <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName2" href="#" style="font-size: 18px;">Venus Flytrap</a></li>
+                        <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName3" href="#" style="font-size: 18px;">Venus Flytrap</a></li>
 
                     </ul>
                 </div>
