--- a/client/controlpanel/allgroups.html
+++ b/client/controlpanel/allgroups.html
@@ -51,7 +51,7 @@ xhr.send();
                 <div class="collapse navbar-collapse" id="TheNavBar">
                     <ul class="nav navbar-nav navbar-right">
                         <!--Username-->
-                        <li><a><span id="usernameRenderTarget" class="glyphicon glyphicon-user"</span></a></li>
+                        <li><a><span id="usernameRenderTarget" class="glyphicon glyphicon-user"><!----></span></a></li>
 
                         <li><a href="dashboard.html"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>Go back</a></li>
                         <li><a href="index.html"><span class="glyphicon glyphicon-log-out">&nbsp;</span>Signout</a></li>
@@ -81,38 +81,37 @@ xhr.send();
 
                         <ul id="groupRender">
 
-                            <br/>
-
                             <li class="groupElement"><button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:5px;">&nbsp;Settings</button><a href="#" id="groupName1">Unholy Plants</a>
-
+                                <br/>
                                 <ul class="plantList">
                                     <br/>
-                                    <p style="font-size: 13px;"><strong>Plants</strong><p>
+                                    <li><p style="font-size: 13px;"><strong>Plants</strong><p></li>
 
-                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName1" href="#">Venus Flytrap</a></li>
+                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button><!----><a id="plantName1" href="#">Venus Flytrap</a></li>
 
-                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName2" href="#">Poison Ivy</a></li>
+                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button><!----><a id="plantName2" href="#">Poison Ivy</a></li>
 
-                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName3" href="#">Ghost Chili</a></li>
+                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button><!----><a id="plantName3" href="#">Ghost Chili</a></li>
 
-                                </ul><br/>
+                                </ul>
+                                <br/>
                             </li>
-                            <br/>
-                             <li class="groupElement"><button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:5px;">&nbsp;Settings</button><a href="#" id="groupName2">Unholy Plants</a>
+                            <li><br/></li>
+                            <li class="groupElement"><button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:5px;">&nbsp;Settings</button><a href="#" id="groupName2">Unholy Plants</a>
 
                                 <ul class="plantList">
-                                    <br/>
-                                    <p style="font-size: 13px;"><strong>Plants</strong><p>
 
-                                    <li class="planetElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName4" href="#">Venus Flytrap</a></li>
+                                    <li><br/><p style="font-size: 13px;"><strong>Plants</strong><p></li>
 
-                                    <li class="planetElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName5" href="#">Poison Ivy</a></li>
+                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"><!----></button>&nbsp;<a id="plantName4" href="#">Venus Flytrap</a></li>
 
-                                    <li class="planetElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button>&nbsp;<a id="plantName6" href="#">Ghost Chili</a></li>
+                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"><!----></button>&nbsp;<a id="plantName5" href="#">Poison Ivy</a></li>
+
+                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"><!----></button>&nbsp;<a id="plantName6" href="#">Ghost Chili</a></li>
                                 </ul><br/>
                             </li>
-                            <br/>
                         </ul>
+                        <br/>
                     </div>
                 </div>
             <div id="expandedPlantContainer"></div>
