--- a/client/controlpanel/allgroups.html
+++ b/client/controlpanel/allgroups.html
@@ -84,14 +84,14 @@ xhr.send();
                             <li class="groupElement"><button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:5px;">&nbsp;Settings</button><a href="#" id="groupName1">Unholy Plants</a>
                                 <br/>
                                 <ul class="plantList">
-                                    <br/>
-                                    <li><p style="font-size: 13px;"><strong>Plants</strong><p></li>
 
-                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button><!----><a id="plantName1" href="#">Venus Flytrap</a></li>
+                                    <li><br/><p style="font-size: 13px;"><strong>Plants</strong></p></li>
 
-                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button><!----><a id="plantName2" href="#">Poison Ivy</a></li>
+                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"><!----></button><a id="plantName1" href="#">Venus Flytrap</a></li>
 
-                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"></button><!----><a id="plantName3" href="#">Ghost Chili</a></li>
+                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"><!----></button><a id="plantName2" href="#">Poison Ivy</a></li>
+
+                                    <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"><!----></button><a id="plantName3" href="#">Ghost Chili</a></li>
 
                                 </ul>
                                 <br/>
@@ -101,7 +101,7 @@ xhr.send();
 
                                 <ul class="plantList">
 
-                                    <li><br/><p style="font-size: 13px;"><strong>Plants</strong><p></li>
+                                    <li><br/><p style="font-size: 13px;"><strong>Plants</strong></p></li>
 
                                     <li class="plantElement"><button onclick="" class="glyphicon glyphicon-cog pull-left" style="border:none;background-color:transparent;padding-top: 2px;"><!----></button>&nbsp;<a id="plantName4" href="#">Venus Flytrap</a></li>
 
