--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -74,7 +74,7 @@ function hex2a(hexx) {
 		<!--The settings container, currently doesnt do anything other than show forms
 		and send a confirm alert upon button press-->
 		<div class="container">
-			<h1><span class="glyphicon glyphicon-cog"></span>&nbsp;General Settings</h1>
+			<h1><span class="glyphicon glyphicon-cog"><!----></span>&nbsp;General Settings</h1>
 			<p>Here you can change various settings for your PlantPi environment.</p>
 			<div class="container">
 				<br/>
@@ -100,10 +100,10 @@ function hex2a(hexx) {
 						<br/>
 						<p>Account Infomation</p>
 					</div>
-					<div class="subform" action="">
+					<div class="subform">
                         <p>Email Infomation</p>
                         <div class="form-group">
-                            <label for="cur_password">Email Address</label>
+                            <label for="email-address">Email Address</label>
                             <input type="text" class="form-control" id="email_address" placeholder="plantpi_is_awesome27@gmail.com"/>
                         </div>
                     </div>
@@ -117,10 +117,6 @@ function hex2a(hexx) {
                     <div class="form-group">
 					    	<label for="cur_password">Current Password</label>
 					    	<input type="text" class="form-control" id="cur_password" placeholder=""/>
-					</div>
-					<div class="form-group">
-						   	<label for="cur_password">Re-enter Password</label>
-						   	<input type="text" class="form-control" id="cur_password" placeholder=""/>
 					</div>
 					<div class="form-group">
 					    	<label for="new_password">New Password</label>
